# ivf-hnsw

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.faiss  IndexIVF_DB.cpp  IndexIVF_DB.h  IndexIVF_HNSW.cpp  IndexIVF_HNSW.h  IndexIVF_HNSW_Grouping.cpp  IndexIVF_HNSW_Grouping.h  Parser.h  README.md  clear_env_dev.sh  dbsetup.sql  orcv.h  setup_db.sh  setup_env.sh  setup_env_dev.sh  setup_faiss_dev.sh  setup_libpq_msys2.sh  utils.cpp  utils.h
docs_hnsw/: 查询文件格式.docx  量化文件格式.docx
examples/: README  run_mkindex.sh  run_sift1b_enn.sh  run_sift1b_enn_64bits.sh  run_sift1b_grouping_OPQ_disk.sh  run_sift1b_grouping_OPQ_orca.sh  run_sift1b_grouping_OPQ_vector_add.sh  run_sift1b_grouping_OPQ_vector_add_db.sh  run_sift1b_grouping_build_pq.sh  run_sift1b_orca.sh  run_sift1b_orca_centriod.sh  run_sift1b_orca_enn.sh  run_sift1b_orca_nprobe20.sh  run_sift1b_sift_grouping_OPQ.sh  run_sift1b_siftsmall_grouping_OPQ.sh  run_sift1b_small_grouping_OPQ.sh  test_debug.sh  test_quantizer.sh
faisslib/: faiss
faisslib/faiss_987337/: README.md
faisslib/faiss_release_o2/: README.md
hnswlib/: hnswalg.cpp  hnswalg.h
orca_docs/: ORCV Persistent Vector Files.docx  ORCV 向量文件格式定义.docx  标定文件格式.docx  索引文件格式.docx
tests/: CMakeLists.txt  disorder_centroids.cpp  mkindex.cpp  test_ivfhnsw_deep1b.cpp  test_ivfhnsw_grouping_deep1b.cpp  test_ivfhnsw_grouping_sift1b.cpp  test_ivfhnsw_grouping_sift1b_debug.cpp  test_ivfhnsw_grouping_sift1b_disk.cpp  test_ivfhnsw_grouping_sift1b_orca.cpp  test_ivfhnsw_grouping_sift1b_small.cpp  test_ivfhnsw_grouping_sift1b_vector_add.cpp  test_ivfhnsw_grouping_sift1b_vector_add_db.cpp  test_ivfhnsw_sift1b.cpp  test_ivfhnsw_sift1b_enn.cpp  test_ivfhnsw_sift1b_orca.cpp  test_ivfhnsw_sift1b_orca_enn.cpp  test_ivfhnsww_grouping_sift1b_build_pq.cpp  test_quantizer.cpp  test_sift1b_orca.cpp
tools/: Makefile  vector_split.cpp
tools/build_index/: Makefile  build_index.cpp
tools/build_index2/: Makefile  build_index.cpp
tools/build_index3/: Makefile  build_index.cpp
tools/build_index_ex/: Makefile  build_index.cpp
tools/build_pq/: Makefile  build.json  build_pq.cpp
tools/build_pq/nlohmann/: json.hpp
tools/build_precomputed_index/: Makefile  build.json  build_precomputed_index.cpp
tools/build_precomputed_index_ex/: Makefile  build_precomputed_index_ex.cpp
tools/delete_vid/: run_search.sh  test_ivfhnsw_grouping_sift1b.cpp
tools/load_index/: Makefile  load_index.cpp
tools/search_index/: Makefile  search_index.cpp
tools/search_index_ex/: Makefile  run_search.sh  search_index.cpp
tools/search_index_v2/: search_index.cpp
tools/vector_split/: vector_split.cpp
ut/batch/ut1/: Makefile  (+1 more)
ut/faiss_pq/: Makefile  ut_main.cpp
ut/index-ivf-hnsw/: Makefile  ut_main.cpp
(+1 files in other folders)
